Corrigindo caminho dos arquivos de cânticos

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
             const popup = document.getElementById('popupOverlay');
             const content = document.getElementById('popupContent');
             
-            const filePath = `/missa/Missa/${category}/${songName}`;
+            const filePath = `missa/Missa/${category}/${songName}`;
             const isImage = songName.toLowerCase().includes('.jpeg') || songName.toLowerCase().includes('.jpg');
             
             if (isImage) {
