Adicionando atalhos para arquivos JPEG e outros formatos

--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
         // Dados das categorias e cânticos
         const categories = {
             "1 - Entrada": [
+                "1 - Quadro Entrada - Creio.jpeg",
                 "Entrada - Eu e Minha Casa Serviremos ao Senhor.pdf",
                 "a_biblia_e_a_palavra_de_deus (1).pdf",
                 "a_biblia_e_a_palavra_de_deus.pdf",
@@ -454,6 +455,7 @@
                 "vem_louvar.pdf"
             ],
             "2 - Ato penitencial": [
+                "2 - Quadro Ato penitencial - Senhor que viestes salvar.jpeg",
                 "Ato Penitencial - Senhor, Piedade.pdf",
                 "conheco_um_coracao.pdf",
                 "coracoes_arrependidos.pdf",
@@ -467,6 +469,8 @@
                 "senhor_tende_piedade_perdoai_nossa_culpa.pdf"
             ],
             "3 - Gloria": [
+                "3 - Quadro Gloria - Gloria a Deus nas alturas.jpeg",
+                "4 - Quadro Gloria - Continuação.jpeg",
                 "Glória - Eliana Ribeiro.pdf",
                 "a_ele_seja_a_gloria.pdf",
                 "gloria_a_deus_nas_alturas.pdf",
@@ -474,6 +478,7 @@
                 "gloria_ao_pai_criador.pdf"
             ],
             "4 - Aclamação ao evangelho": [
+                "5 - Quadro Aclamação - A vossa palavra senhor.jpeg",
                 "Aclamação - Quando Estamos Unidos.pdf",
                 "a_minhalma_abrirei.pdf",
                 "a_vossa_palavra_senhor.pdf",
@@ -487,6 +492,7 @@
                 "vinde_espirito_de_deus.pdf"
             ],
             "5 - Ofertório": [
+                "6 - Quadro Ofertorio - Os dons que trago aqui.jpeg",
                 "a_mesa_santa_que_preparamos.pdf",
                 "de_maos_estendidas.pdf",
                 "meu_coracao_eh_para_ti.pdf",
@@ -497,12 +503,15 @@
                 "um_coracao_para_amar.pdf"
             ],
             "6 - Santo": [
+                "7 - Quadro Santo - Santo santo santo éh o senhor.jpeg",
                 "hosana_eh.pdf",
                 "hosana_no_alto_ceu.pdf",
                 "o_senhor_eh_santo.pdf",
                 "santo_santo_e.pdf"
             ],
             "7 - Comunhão": [
+                "8 - Quadro Comunhão - Todo aquele que comer.jpeg",
+                "8.1 - Quadro Comunhão - Eis que sou o pão da vida.jpeg",
                 "a_barca.pdf",
                 "a_ti_meu_deus.pdf",
                 "antes_da_morte_e_ressurreicao.pdf",
@@ -527,12 +536,14 @@
                 "vou_cantar_teu_amor.pdf"
             ],
             "8 - Ação de Graças": [
+                "9 - Quadro Ação de graças - Só em ti.jpeg",
                 "deus_esta_aqui.pdf",
                 "e_impossivel_nao_crer_em_ti.pdf",
                 "espirito_santo.pdf",
                 "obrigado_senhor.pdf"
             ],
             "9 - Final": [
+                "10 - Quadro Final - Tu és a razão da jornada.jpeg",
                 "a_alegria_esta_no_coracao.pdf",
                 "como_o_pai_me_enviou.pdf",
                 "cristo_eh_a_felicidade.pdf",
@@ -578,8 +589,10 @@
                 "vou-cantar-teu-amor.pdf"
             ],
             "13 - Diversos": [
+                "Quando quero falar com Deus.jpeg",
                 "podes_reinar.pdf",
-                "prova_de_amor.pdf"
+                "prova_de_amor.pdf",
+                "É tão lindo falar com Deus.jpeg"
             ]
         };
 
