--- a/index.html
+++ b/index.html
@@ -786,6 +786,7 @@
                 "segura_na_mao_de_deus.pdf",
                 "tomado_pela_mao.pdf",
                 "tu_es_razao_jornada.pdf"
+                "Anjos de Deus"
             ],
             "10 - Abraço de Paz": [
                 "esteja_sempre_com_voce.pdf",
